# data_sourcing

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  REFERENCE.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml
ci/: tests.yml
docs/: architecture.md  cglabs_setup.md  credentials_setup.md  crop_model_inputs.md  data_sources.md  pipeline_map.md  roadmap.md  sentinel_integration.md  user_guide.md
examples/: README.md  country_monthly_cube.R  crop_model_inputs.py  fertilizer_point_extraction.R  python_quickstart.py  quickstart.R  quickstart.py
r/: agwise_data.R
scripts/: smoke_test.sh
sentinel/: README.md  agwise_phenology_utils.py  script1_Download_Stack_Smooth.py
src/agwise_data/: __init__.py  api.py  boundaries.py  cache.py  catalog.py  cds.py  cli.py  config.py  forecast.py  harmonize.py  memory.py  progress.py  smoothing.py  spatial.py  stac.py  terrain.py
src/agwise_data/catalog/: agera5.yaml  chirps.yaml  chirps_v3.yaml  dem.yaml  esa_worldcover.yaml  isda.yaml  mod13q1.yaml  myd13q1.yaml  seas5.yaml  soil.yaml
src/agwise_data/drivers/: __init__.py  agera5.py  base.py  chirps.py  chirps_v3.py  dem.py  (+8 more)
tests/: __init__.py  conftest.py  test_aoi.py  test_api.py  test_cache.py  test_catalog.py  test_cds.py  test_chirps.py  test_config.py  test_forecast.py  test_grid.py  test_harmonize.py  test_local.py  test_memory.py  test_modis.py  test_performance.py  test_progress.py  test_season.py  test_seasonal.py  test_smoothing.py  test_spatial.py  test_static.py  test_terrain.py  test_worldcover.py  test_writers.py
(+7 files in other folders)
